# MLOps-Recommendation

./: .gitignore  Dockerfile  README.md  codex_news_recommendation_mlops_plan.md  docker-compose.yml  pyproject.toml
01-intro/: HW1.ipynb
airflow/plugins/: __init__.py
alembic/: env.py
alembic/versions/: 8077f47ecd2c_add_article_external_id.py  b01dc46eca1c_create_initial_tables.py
app/: __init__.py  main.py
app/api/: __init__.py
app/db/: models.py  repositories.py  session.py
app/features/: __init__.py  ranking.py
app/monitoring/: __init__.py
app/ranking/: __init__.py  lightgbm_ranker.py
app/retrieval/: __init__.py  bm25.py  dense.py  rerank.py
pipelines/: __init__.py  build_ranking_dataset.py  index_bm25.py  index_dense.py  ingest_hn.py  ingest_mind.py  search_bm25.py  search_dense.py  search_reranked.py
tests/: test_bm25.py  test_dense.py  test_dense_pipelines.py  test_index_bm25.py  test_ingest_hn.py  test_lightgbm_ranker.py  test_ranking_features.py  test_repository.py  test_rerank.py
