[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-recommendation-mlops"
version = "0.1.0"
description = "Production-style news recommendation MLOps platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "opensearch-py>=2.6.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app", "pipelines"]

[tool.setuptools.packages.find]
include = ["app*", "pipelines*"]
exclude = [
    "airflow*",
    "data*",
    "docker*",
    "k8s*",
    "monitoring*",
    "notebooks*",
    "reports*",
    "tests*",
]
